--- a/LMS/ErrorPage.htm
+++ b/LMS/ErrorPage.htm
@@ -26,7 +26,7 @@
             If you continue to receive this message, please try again in a little while.
         <br />
             <br />
-            Thank you for your patience.
+            Thank you for your patience..
         </p>
 
     </div>
