--- a/LMS/ErrorPage.htm
+++ b/LMS/ErrorPage.htm
@@ -16,7 +16,7 @@
             <br />
             We  apologize for the inconvenience.<br />
             <br />
-            Please try clicking your browsers 'back' button or try reloading the home page.
+            Please try clicking your browsers 'back' button or try reloading the home page.....
 
             
         <br /><br />
